--- a/lec12/Makefile
+++ b/lec12/Makefile
@@ -1,12 +1,14 @@
-OBJS= main.o fx_s15_16.o
-CCFLAGS = -Wall -g -pg
+OBJS = main.o fx_s15_16.o
+CCFLAGS = -Wall -O3
 main: $(OBJS)
 	cc $(OBJS) $(CCFLAGS) -o $@
 .c.o:
 	cc -c $(CCFLAGS) $<
+debug: main.c fx_s15_16.c fx_s15_16.h fx_head.h
+	cc -o main_for_debug -pg -g main.c fx_s15_16.c
 clean:
 	rm main $(OBJS)
-	# DO NOT DELETE
+# DO NOT DELETE
 main.o: main.c /usr/include/stdc-predef.h fx_head.h fx_s15_16.h \
  /usr/include/math.h \
  /usr/include/x86_64-linux-gnu/bits/libc-header-start.h \
@@ -35,3 +37,22 @@ main.o: main.c /usr/include/stdc-predef.h fx_head.h fx_s15_16.h \
  /usr/lib/gcc/x86_64-linux-gnu/7/include/stdarg.h \
  /usr/include/x86_64-linux-gnu/bits/stdio_lim.h \
  /usr/include/x86_64-linux-gnu/bits/sys_errlist.h
+fx_s15_16.o: fx_s15_16.c /usr/include/stdc-predef.h fx_head.h fx_s15_16.h \
+ /usr/include/math.h \
+ /usr/include/x86_64-linux-gnu/bits/libc-header-start.h \
+ /usr/include/features.h /usr/include/x86_64-linux-gnu/sys/cdefs.h \
+ /usr/include/x86_64-linux-gnu/bits/wordsize.h \
+ /usr/include/x86_64-linux-gnu/bits/long-double.h \
+ /usr/include/x86_64-linux-gnu/gnu/stubs.h \
+ /usr/include/x86_64-linux-gnu/gnu/stubs-64.h \
+ /usr/include/x86_64-linux-gnu/bits/types.h \
+ /usr/include/x86_64-linux-gnu/bits/typesizes.h \
+ /usr/include/x86_64-linux-gnu/bits/math-vector.h \
+ /usr/include/x86_64-linux-gnu/bits/libm-simd-decl-stubs.h \
+ /usr/include/x86_64-linux-gnu/bits/floatn.h \
+ /usr/include/x86_64-linux-gnu/bits/floatn-common.h \
+ /usr/include/x86_64-linux-gnu/bits/flt-eval-method.h \
+ /usr/include/x86_64-linux-gnu/bits/fp-logb.h \
+ /usr/include/x86_64-linux-gnu/bits/fp-fast.h \
+ /usr/include/x86_64-linux-gnu/bits/mathcalls-helper-functions.h \
+ /usr/include/x86_64-linux-gnu/bits/mathcalls.h
